c2rust-transpile/tests/snapshots/snapshots__transpile-macos@uint32.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
assertion_line: 67
expression: cat tests/snapshots/platform-specific/uint32.rs
input_file: c2rust-transpile/tests/snapshots/platform-specific/uint32.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
pub type uint32_t = u32;
#[no_mangle]
pub static mut var: uint32_t = 0;

