c2rust-transpile/tests/snapshots/snapshots__transpile-x86_64@dummy2.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-specific/dummy2.x86_64.rs
input_file: c2rust-transpile/tests/snapshots/arch-specific/dummy2.c
---
#![allow(
    dead_code,
    mutable_transmutes,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
