c2rust-transpile/tests/snapshots/snapshots__transpile-x86_64@spin.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-specific/spin.x86_64.rs
input_file: c2rust-transpile/tests/snapshots/arch-specific/spin.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_imports,
    unused_mut
)]
#![feature(stdsimd)]
#[cfg(target_arch = "x86")]
pub use ::core::arch::x86::_mm_pause;
#[cfg(target_arch = "x86_64")]
pub use ::core::arch::x86_64::_mm_pause;
#[no_mangle]
pub unsafe extern "C" fn spin() {
    _mm_pause();
}
