c2rust-transpile/tests/snapshots/snapshots__transpile@alloca.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/alloca.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub static mut TRUE: ::core::ffi::c_int = 1 as ::core::ffi::c_int;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn alloca_sum(
    mut val1: ::core::ffi::c_int,
    mut val2: ::core::ffi::c_int,
) -> ::core::ffi::c_int {
    let mut c2rust_alloca_allocations: Vec<Vec<u8>> = Vec::new();
    let mut alloca1: *mut ::core::ffi::c_int = ::core::ptr::null_mut::<::core::ffi::c_int>();
    let mut alloca2: *mut ::core::ffi::c_int = ::core::ptr::null_mut::<::core::ffi::c_int>();
    if TRUE != 0 {
        c2rust_alloca_allocations.push(::std::vec::from_elem(
            0,
            ::core::mem::size_of::<::core::ffi::c_int>() as usize,
        ));
        alloca1 = c2rust_alloca_allocations.last_mut().unwrap().as_mut_ptr()
            as *mut ::core::ffi::c_void as *mut ::core::ffi::c_int;
        *alloca1 = val1;
    }
    if TRUE != 0 {
        c2rust_alloca_allocations.push(::std::vec::from_elem(
            0,
            ::core::mem::size_of::<::core::ffi::c_int>() as usize,
        ));
        alloca2 = c2rust_alloca_allocations.last_mut().unwrap().as_mut_ptr()
            as *mut ::core::ffi::c_void as *mut ::core::ffi::c_int;
        *alloca2 = val2;
    }
    return *alloca1 + *alloca2;
}
